try to allow get sitemap by google search console

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
-  "routes": [
-    {
-      "src": "/(favicon\\.ico|favicon\\.svg|robots\\.txt|sitemap\\.xml)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
